[package]
name = "nano_chain"
version = "0.1.0"
authors = ["Hiroto Shioi <hiroto.shioi@iohk.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha3 = "0.8.2"
hex = "0.3.2"
base64 = "0.10.1"
serde_json = "1.0"
serde_yaml = "0.8"
serde = { version = "1.0.99", features = ["derive"]}
clap = "2.33.0"
ctrlc = "3.1.3"